syntax = "proto3";
package v1;

service CatalogService {
  rpc GetCatalog(Keyword) returns (Products){}
  rpc UpdateCatalog(Products) returns (Response){}
}

message Product {
	enum Vendor {
		BLIBLI = 0;
		BUKALAPAK = 1;
		MURAHID = 2;
	}
	Vendor vendor = 1;
	string produk = 2;
	string gambar = 3;
  int32 harga = 4;
  string kategori = 5;
	string link = 6;
}

message Products {
	repeated Product products = 1;
}

message Keyword {
	string Keyword = 1;
}

message Response {
	bool success = 1;
	int32 code = 2;
	string message = 3;
}